# lovable-clone

./: Dockerfile  PROJECT_CONTEXT.md  README.md  e2b.toml  inject.py  main.py  pyproject.toml
agent/: agent.py  formatters.py  graph_nodes.py  graph_state.py  prompts.py  service.py  tools.py
auth/: schema.py  utils.py
backend/: e2b.Dockerfile  e2b.toml  inject.py  main.py  package-lock.json  pyproject.toml
backend/agent/: agent.py  graph_builder.py  graph_nodes.py  graph_state.py  prompts.py  service.py  service.txt  specialized_tools.py  tools.py
backend/auth/: dependencies.py  router.py  schema.py  utils.py
backend/db/: base.py  models.py
backend/utils/: store.py
db/: base.py
frontend/: package-lock.json  package.json
frontend/api/: README.md  auth.ts  chat.ts  client.ts  index.ts  types.ts
frontend/app/: globals.css  layout.tsx  page-styles.css  page.tsx
frontend/app/chat/: page.tsx
frontend/app/chat/[id]/: page.tsx
frontend/app/signin/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/chat/: ChatIdHeader.tsx  ChatInput.tsx  ChatInputBox.tsx  ChatNavbar.tsx  FileViewer.tsx  FilesList.tsx  FormattedMessage.tsx  MessageBubble.tsx  PreviewPanel.tsx  ProjectsList.tsx  PromotionBanner.tsx  README.md  ToolCallsDropdown.tsx  index.ts
frontend/lib/: chat-types.ts  chat-utils.ts  utils.ts  websocket-handlers.ts
utils/: store.py
