[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "black>=25.9.0",
    "dotenv>=0.9.9",
    "e2b-code-interpreter>=2.2.0",
    "fastapi>=0.119.0",
    "greenlet>=3.2.4",
    "huggingface-hub>=0.36.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "transformers>=4.57.1",
    "uvicorn[standard]>=0.38.0",
]
