[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "e2b-code-interpreter>=2.2.0",
    "fastapi>=0.119.0",
    "huggingface-hub>=0.36.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "transformers>=4.57.1",
    "uvicorn[standard]>=0.38.0",
]
